feat: unit test and Display ResponseEntity